[package]
name = "ipfsapi"
version = "0.2.2"
description = "Crate for interfacing with the IPFS api"
license = "MIT"
keywords = ["ipfs", "api", "p2p"]
categories = ["api-bindings"]
repository = "https://github.com/gkbrk/rust-ipfs-api"
documentation = "https://docs.rs/ipfsapi"
authors = ["Gökberk Yaltıraklı <webdosusb@gmail.com>"]
readme = "README.md"

[dependencies]
reqwest = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1"
base64 = "0.6"
