[package]
name = "ipfsapi"
version = "0.4.0"
edition = "2021"
description = "Crate for interfacing with the IPFS api"
license = "MIT"
keywords = ["ipfs", "api", "p2p"]
categories = ["api-bindings"]
repository = "https://github.com/gkbrk/rust-ipfs-api"
documentation = "https://docs.rs/ipfsapi"
authors = ["Gökberk Yaltıraklı <opensource@gkbrk.com>"]
readme = "README.md"

[dependencies]
ureq = { version = "2.4", features = [] }
serde_json = "1.0"
